# raytracer

./: .gitignore  CMakeLists.txt  README.md  main.cc
include/: camera_window.hh  disk.hh  object.hh  pixel.hh  plane.hh  scene.hh  vec3.hh
src/: camera_window.cc  disk.cc  main.cpp  pixel.cc  plane.cc  vec3.cc
